# trig

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Trig  cmake_install.cmake  rmcache.sh
lib/glad/: glad.c  glad.h
src/: application.cc  application.h  main.cc
